--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -45,7 +45,9 @@
   flex-direction: row;
   justify-content: center; 
   gap: 10px;
-  margin: 0;  
+  margin: 0;
+  list-style: none;  
+  padding: 0;
 }
 
 .techs__icon {
@@ -53,7 +55,7 @@
   width: 90px;
   height: 60px;
   border-radius: 10px;
-  text-align: center;
+  text-align: center;  
   padding-top: 21px;
   padding-bottom: 22px;
   margin: 0;
