--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -40,6 +40,11 @@
   padding: 0;
   cursor: pointer;
 }
+
+.movie__save-icon:hover {
+  opacity: 0.7;
+}
+
 .movie__save-icon_active {
   background-image: url(../../../images/saved-red-icon.svg);
 }
