--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,9 @@
 
 .page {
   max-width: 1280px;  
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   box-sizing: border-box;  
   background-color: #202020;
@@ -19,4 +21,10 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+}
+
+@media screen and (max-width: 320px) {
+  .page {
+    max-width: 320px;
+  }
 }
