--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -7,11 +7,13 @@ input:-webkit-autofill:focus {
     transition: background-color 5000s ease-in-out 0s;
 }
 
-.auth-form {
-  min-height: 450px;
+.auth-form {  
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; 
+  justify-content: space-between;
+  margin-bottom: 70px;
+  min-height: 483px;
+  width: 100%;
 }
 
 .auth-form__label {
@@ -36,6 +38,9 @@ input:-webkit-autofill:focus {
   padding-left: 15px;
   outline: none;
 }
+.auth-form__input:focus {
+  outline: 1px solid #F8F8F8;
+}
 .auth-form__input_notvalid {
   color: #EE3465;  
 }
@@ -50,18 +55,28 @@ input:-webkit-autofill:focus {
 .auth-form__input-error_active {
   visibility: visible;
 }
+
+.auth-form__bottom {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 70px;
+}
+
 .auth-form__btn {
   background-color: #4285F4;
   width: 100%;
   height: 45px;
   border: none;
   border-radius: 3px;
-  color: #FFFFFF;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: normal;
-  cursor: pointer;
-  margin-top: 70px;
+  color: #FFFFFF;  
+  font-weight: 500;  
+  cursor: pointer;  
 }
 .auth-form__btn:hover {
   opacity: 0.8;
@@ -70,15 +85,11 @@ input:-webkit-autofill:focus {
   background-color: #F8F8F8;
   color: #000000;
 }
-.auth-form__bottom {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: normal;
-}
 .auth-form__question {
   color: #8b8b8b;
   text-align: center;
-  margin-top: 16px;
+  margin: 0;
+  padding: 0;
 }
 .auth-form__link {
   color: #4285F4;
@@ -90,12 +101,20 @@ input:-webkit-autofill:focus {
   opacity: 0.7;
 }
 
+@media screen and (max-width: 768px) {  
+}
+
 @media screen and (max-width: 450px) {
+  .auth-form {    
+    margin-bottom: 30px;
+    min-height: 527px;
+  }  
   .auth-form__btn {
     font-size: 12px;    
     margin-top: 137px;
   }
   .auth-form__bottom {
     font-size: 12px;
+    margin-bottom: 30px;
   }
 }
