--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -15,6 +15,7 @@
   gap: 40px;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .navtab__item {
@@ -26,7 +27,7 @@
   cursor: pointer;
 }
 
-.navtab__item:active {
+.navtab__item:hover {
   opacity: 0.7;
 }
 
