--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -1,25 +1,32 @@
 
 .searchform {  
-  border-bottom: 1px solid #424242;
+  border-bottom: 1px solid #424242; 
   margin: 0 70px;
-  padding: 0;
+  padding: 0;  
 }
 
 .searchform__container {  
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;  
+}
+
+.searchform__search-group {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 70px 0 40px;
+  width: 100%;
+  margin: 57px 0 40px;
   background-color: #2f2f2f;
-  border-radius: 40px;  
+  border-radius: 40px;
 }
 
 .searchform__input {  
   border: none;
   border-radius: 40px;
-  background-color: #2f2f2f;
-  width: 100%;
+  background-color: #2f2f2f;  
   height: 46px;
   color: #FFFFFF;
   font-size: 18px;
@@ -35,6 +42,10 @@
   font-size: 13px;
   font-weight: 400;
   line-height: 17px;  
+}
+
+.searchform__input:focus {  
+  outline: 1px solid #4285F4;
 }
 
 .searchform__find-btn {
@@ -68,6 +79,10 @@
   margin: 0;
   padding: 0;
   cursor: pointer;
+}
+
+.searchform__filter:hover {
+  opacity: 0.8;
 }
 
 .searchform__checkbox {
@@ -114,6 +129,17 @@
   .searchform {    
     margin: 0 30px;
   }
+  .searchform__search-group {    
+    margin: 80px 0 41px;
+  }
+  .searchform__filter-group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    margin: 0;
+    margin-bottom: 40px;
+  }
 }
 
 @media screen and (max-width: 420px) {
@@ -121,11 +147,17 @@
     margin: 0 14px;
   }
   .searchform__container {  
+    margin: 0;
+  }
+  .searchform__search-group {    
     margin: 80px 0 40px;
+  }
+  .searchform__input::placeholder {    
+    font-size: 11px;      
   }
   .searchform__filter-group {
     gap: 13px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
   }
   .searchform__check-title {
     font-size: 11px;    
