--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,18 +1,26 @@
 .register {
-  width: 396px;
-  padding: 0 442px;
+  width: 31%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0 auto;
   background-color: #202020;
   height: 100vh;
+}
+.register__container {
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
   .register {
-    padding: 0 186px;
+    width: 52%;
   }
  }
 
  @media screen and (max-width: 450px) {
-  .register {
-    padding: 0 30px;
+  .register {   
+    width: 82%;
+    align-items: center;
   }
  }
