--- a/src/components/Movies/Preloader/Preloader.css
+++ b/src/components/Movies/Preloader/Preloader.css
@@ -61,7 +61,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: #073042;
+    background: #29f48b;
     border-radius: 50px;
 }
 
@@ -77,12 +77,12 @@
 }
 
 .preloader__round::after {
-    background: white;
+    background: #fff;
     animation: preloader-inside-white 1s ease-in-out infinite;
 }
 
 .preloader__round::before {
     z-index: 10;
-    background: #073042;
+    background: #29f48b;
     animation: preloader-inside-red 1s ease-in-out infinite;
 }
